// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`dashboard-grid render default 1`] = `

<div>
  <div class="flex h-full flex-col px-8 py-4">
    <div
      class="flex w-full max-w-8xl flex-col"
      style="opacity: 0; transform: translateY(-5px);"
    >
      <p class="mb-4 text-sm font-semibold">
        Projects
      </p>
      <div class="grid grid-cols-1 gap-x-6 gap-y-6 sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4">
        <p>
          No projects found
        </p>
      </div>
    </div>
  </div>
</div>

`;

exports[`dashboard-grid with results 1`] = `

<div>
  <div class="flex h-full flex-col px-8 py-4">
    <div
      class="flex w-full max-w-8xl flex-col"
      style="opacity: 0; transform: translateY(-5px);"
    >
      <p class="mb-4 text-sm font-semibold">
        Projects
      </p>
      <div class="grid grid-cols-1 gap-x-6 gap-y-6 sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4">
      </div>
    </div>
  </div>
</div>

`;
